@@ -1,25 +1,25 @@
 Method = SaltelliSensitivityAlgorithm
-First order Sobol indice of Y|X1 = 0.288219
-Total order Sobol indice of Y|X3 = 0.258698
-Second order Sobol indice of Y|X1,X3 = 0.251393
-Confidence interval of first order Y|X1 = [0.259074, 0.317251]
-Confidence interval of total order Y|X3 = [0.219342, 0.282322]
+First order Sobol indice of Y|X1 = 0.293134
+Total order Sobol indice of Y|X3 = 0.256687
+Second order Sobol indice of Y|X1,X3 = 0.24049
+Confidence interval of first order Y|X1 = [0.272983, 0.309189]
+Confidence interval of total order Y|X3 = [0.227016, 0.281488]
 Method = JansenSensitivityAlgorithm
 First order Sobol indice of Y|X1 = 0.322419
 Total order Sobol indice of Y|X3 = 0.240408
-Second order Sobol indice of Y|X1,X3 = 0.186166
+Second order Sobol indice of Y|X1,X3 = 0.18219
 Confidence interval of first order Y|X1 = [0.304766, 0.349408]
 Confidence interval of total order Y|X3 = [0.23337, 0.251482]
 Method = MauntzKucherenkoSensitivityAlgorithm
-First order Sobol indice of Y|X1 = 0.28813
-Total order Sobol indice of Y|X3 = 0.258785
-Second order Sobol indice of Y|X1,X3 = 0.251571
-Confidence interval of first order Y|X1 = [0.260406, 0.320803]
-Confidence interval of total order Y|X3 = [0.233219, 0.290062]
+First order Sobol indice of Y|X1 = 0.293133
+Total order Sobol indice of Y|X3 = 0.256687
+Second order Sobol indice of Y|X1,X3 = 0.240492
+Confidence interval of first order Y|X1 = [0.272701, 0.317057]
+Confidence interval of total order Y|X3 = [0.229661, 0.28614]
 Method = MartinezSensitivityAlgorithm
 First order Sobol indice of Y|X1 = 0.308902
 Total order Sobol indice of Y|X3 = 0.244293
-Second order Sobol indice of Y|X1,X3 = 0.218937
+Second order Sobol indice of Y|X1,X3 = 0.214961
 Confidence interval of first order Y|X1 = [0.289644, 0.326722]
 Confidence interval of total order Y|X3 = [0.211387, 0.272784]
 Asymptotic estimate
