@@ -63,5 +63,5 @@ Examples
 >>> # sensitivity analysis algorithm
 >>> sensitivityAnalysis = ot.SaltelliSensitivityAlgorithm(inputDesign, outputDesign, size)
 >>> print(sensitivityAnalysis.getFirstOrderIndices())
-[0.435214,0.469041,0.0193581]"
+[0.375492,0.406356,-0.00557602]"
 
