@@ -44,7 +44,9 @@
  * Added more options to control LHSExperiment and LowDiscrepancyExperiment
 
 === Bug fixes ===
+ * #565 (The SensitivityAnalysis class manages only one single output.)
  * #698 (KernelSmoothing() as a factory)
+ * #786 (Bug in sensitivity analysis)
  * #813 (Error when multiplying a Matrix by a SymmetricMatrix)
  * #820 (Python distribution fails randomly when computing the PDF over a sample)
  * #822 (Incorect Matrix / point operations with cast)
